--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=9090
+
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/car_wash
 spring.datasource.username=postgres
 spring.datasource.password=123
